I added my name and said that I like pizza

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>MY NAME IS SHAYLA</h1>
+    <h1>My name is Shayla    </h1>
 </body>
-</html>
+</html> I like pizza :3
